HTML Skeleton for JS development

--- a/public/measurements.html
+++ b/public/measurements.html
@@ -34,16 +34,16 @@
 <br>
     
 <div class="container">
-        <div class="row justify-content-md-center">
-          <div class="col col-lg-2">
+        <div class="row">
+          <div class="col">
             <div class="form-group mx-sm-3 mb-2">
               <a>Weight</a>
             </div>
           </div>
           <div class="col-md-auto">
             <div class="form-group mx-sm-3 mb-2">
-              <label for="weight" class="sr-only">Weight</label>
-              <input type="text" class="form-control" id="weight" placeholder="New Measurement">
+              <label for="Weight" class="sr-only">Weight</label>
+              <input type="text" class="form-control" id="Weight" placeholder="New Measurement">
             </div>
           </div>
           <div class="col col-lg-2">
