--- a/public/welcome.html
+++ b/public/welcome.html
@@ -8,10 +8,17 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
   <script src="main.js"></script>
-  <link rel="stylesheet" href="styles.css"/>
+  <link rel="stylesheet" href="./styles/styles.css"/>
 </head>
 
 <body>
+
+
+    <div id="home">
+          <h1 class="landing-text display-4">Welcome!</h1>
+         
+
+
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">M-BODY</a>
@@ -28,12 +35,8 @@
       </div>
     </nav>
 
-    <div class="jumbotron">
-      <h1 class="display-4">Welcome!</h1>
-      <p class="lead">
-        Mbody Intro
-      </p>
-    </div>
+
+ 
 
     <div class="row">
       <div class="col-sm-6">
@@ -113,6 +116,7 @@
                     <button class="btn btn-success btn-block">Log in</button>
                   </div>
                 </div>
+              </div>
 
 
                 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -124,6 +128,9 @@
                 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
                   integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
                   crossorigin="anonymous"></script>
+
+
+              
 </body>
 
 </html>
