--- a/public/measurements.html
+++ b/public/measurements.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
-    <script src="main.js"></script>
 </head>
 
 <body>
@@ -43,7 +42,7 @@
           <div class="col-md-auto">
             <div class="form-group mx-sm-3 mb-2">
               <label for="Weight" class="sr-only">Weight</label>
-              <input type="text" class="form-control" id="Weight" placeholder="New Measurement">
+              <input type="text" class="form-control" id="weight" placeholder="New Measurement">
             </div>
           </div>
           <div class="col col-lg-2">
@@ -234,7 +233,7 @@
             </div>   
           </div>
           <div class="col col-lg-2">        
-            <button type="submit" class="btn btn-primary mb-2">Submit All</button>                          
+            <button type="submit" class="btn btn-primary mb-2 submitButton">Submit All</button>                          
           </div>
         </div>
             
@@ -251,6 +250,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <script src="js/measurements.js"></script>
 </body>
 
 </html>
