--- a/public/user.html
+++ b/public/user.html
@@ -9,8 +9,8 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
+      <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Nanum+Gothic|Quicksand" rel="stylesheet">
     <script src="main.js"></script>
   </head>
 
@@ -31,11 +31,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#"
-            >User <span class="sr-only">(current)</span></a
+          <a class="nav-item nav-link active" href="user.html"> User <span class="sr-only">(current)</span></a
           >
-          <a class="nav-item nav-link" href="#">Add Stats</a>
-          <a class="nav-item nav-link" href="#">View Stats</a>
+          <a class="nav-item nav-link" href="user.html">Add Stats</a>
+          <a class="nav-item nav-link" href="measurements.html">View Stats</a>
         </div>
       </div>
     </nav>
@@ -47,12 +46,12 @@
                     <div class="col-sm-6">
                       <div class="card">
                         <div class="card-body">
-                          <h5 class="card-title">Special title treatment</h5>
+                          <h5 class="card-title"></h5>
                           <p class="card-text">
                             With supporting text below as a natural lead-in to additional
                             content.
                           </p>
-                          <a href="#" class="btn btn-primary">ADD MEASUREMENTS</a>
+                          <a href="measurements.html" class="btn btn-primary">ADD MEASUREMENTS</a>
                         </div>
                       </div>
                     </div>
@@ -65,7 +64,7 @@
                             With supporting text below as a natural lead-in to additional
                             content.
                           </p>
-                          <a href="#" class="btn btn-primary">VIEW STATS</a>
+                          <a href="user_stat.html" class="btn btn-primary">VIEW STATS</a>
                         </div>
                       </div>
                     </div>
