--- a/public/user_stat.html
+++ b/public/user_stat.html
@@ -9,21 +9,23 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
     <script src="main.js"></script>
+    <link re="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Nanum+Gothic|Quicksand" rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">M-BODY</a>
+            <a class="navbar-brand" href="welcome.html">M-BODY</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#">Add Stats</a>
-                    <a class="nav-item nav-link" href="#">View Stats</a>
+                    <a class="nav-item nav-link active" href="welcome.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="user.html">Add Stats</a>
+                    <a class="nav-item nav-link" href="user_stat.html">View Stats</a>
                 </div>
             </div>
         </nav>
