--- a/public/welcome.html
+++ b/public/welcome.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
   <script src="main.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Nanum+Gothic|Quicksand|Press+Start+2P" rel="stylesheet">
   <link rel="stylesheet" href="./styles/styles.css"/>
 </head>
 
@@ -15,22 +16,22 @@
 
 
     <div id="home">
-          <h1 class="landing-text display-4">Welcome!</h1>
+          <h1 class="landing-text display-4" id="welcome-h1">WELCOME TO M-BODY</h1>
          
 
 
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">M-BODY</a>
+      <a class="navbar-brand" href="welcome.html">M-BODY</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="#">Add Stats</a>
-          <a class="nav-item nav-link" href="#">View Stats</a>
+          <a class="nav-item nav-link active" href="welcome.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="user.html">Add Stats</a>
+          <a class="nav-item nav-link" href="user_stat.html">View Stats</a>
         </div>
       </div>
     </nav>
@@ -55,7 +56,7 @@
                 <div class="modal-content">
 
                   <!--Header-->
-                  <div class="modal-header">Create a new Profile
+                  <div class="modal-header">Create A New Profile
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                   </div>
 
@@ -63,16 +64,16 @@
                   <div class="modal-body">
                     <form role="form">
                       <div class="form-group">
-                        <input type="email" class="form-control" placeholder="Email">
+                        <input type="email" class="form-control" placeholder="Name">
                       </div>
-                      <div class="form-group">
+                      <!-- <div class="form-group">
                         <input type="password" class="form-control" placeholder="Password">
-                      </div>
+                      </div> -->
                     </form>
                   </div>
                   <!--Login Button-->
                   <div class="modal-footer">
-                    <button class="btn btn-success btn-block">Create and Log in</button>
+                    <button class="btn btn-success btn-block">Submit</button>
                   </div>
                 </div>
               </div>
