added page titles

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Page Title</title>
+  <title>M-Body Homepage</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
@@ -49,7 +49,7 @@
               content.
             </p>
 
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#joinWindow">Join</button>
+            <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#joinWindow">Join</button>
 
             <div class="modal fade" id="joinWindow">
               <div class="modal-dialog">
@@ -64,11 +64,9 @@
                   <div class="modal-body">
                     <form role="form">
                       <div class="form-group">
-                        <input type="email" class="form-control" placeholder="Name">
+                        <input type="name" class="form-control" placeholder="Name">
                       </div>
-                      <!-- <div class="form-group">
-                        <input type="password" class="form-control" placeholder="Password">
-                      </div> -->
+                    
                     </form>
                   </div>
                   <!--Login Button-->
@@ -84,14 +82,13 @@
       <div class="col-sm-6">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Log in and Measure Your Body!</h5>
+            <h5 class="card-title">Already A Member?</h5>
             <p class="card-text">
-              With supporting text below as a natural lead-in to additional
-              content.
+             Head to the measurements page and update your progress!
             </p>
 
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#logInWindow">Log in</button>
-
+            <button type="button" class="btn btn-dark"><a href="measurements.html">Update Progress</button></a>
+            
             <div class="modal fade" id="logInWindow">
               <div class="modal-dialog">
                 <div class="modal-content">
