updated jquery link

--- a/public/measurements.html
+++ b/public/measurements.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="user.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="measurements.html">Add Stats</a>
+                    <a class="nav-item nav-link" href="user.html">Add Stats</a>
                     <a class="nav-item nav-link" href="user_stat.html">View Stats</a>
                 </div>
             </div>
@@ -242,9 +242,7 @@
     
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
