added user dropdown

--- a/public/measurements.html
+++ b/public/measurements.html
@@ -24,9 +24,24 @@
                     <a class="nav-item nav-link active" href="user.html">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="user.html">Add Stats</a>
                     <a class="nav-item nav-link" href="user_stat.html">View Stats</a>
+
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Users
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                          <a class="dropdown-item" href="#">Action</a>
+                          <a class="dropdown-item" href="#">Another action</a>
+                          <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+
+
+                      </div>
                 </div>
             </div>
         </nav>
+
+        
 
         <div class="jumbotron">
             <h1 class="display-4">MEASUREMENTS</h1>
