--- a/public/welcome.html
+++ b/public/welcome.html
@@ -8,16 +8,18 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
   <script src="main.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Nanum+Gothic|Quicksand|Press+Start+2P" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Quicksand" rel="stylesheet">
   <link rel="stylesheet" href="./styles/styles.css"/>
+  <link rel="stylesheet" href="animate.min.css">
 </head>
 
 <body>
 
 
     <div id="home">
-          <h1 class="landing-text display-4" id="welcome-h1">WELCOME TO M-BODY</h1>
-         
+      <div class="container" id="welcome-h1">
+          <h1 class="landing-text display-4 animated">WELCOME TO M-BODY</h1>
+      </div>
 
 
   <div class="container">
@@ -41,12 +43,11 @@
 
     <div class="row">
       <div class="col-sm-6">
-        <div class="card">
+        <div class="card welcome-card">
           <div class="card-body">
-            <h5 class="card-title">Join and Measure Your Body!</h5>
+            <h5 class="card-title">Ready to Change Your Life?</h5>
             <p class="card-text">
-              With supporting text below as a natural lead-in to additional
-              content.
+              Join and start measuring your progress!
             </p>
 
             <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#joinWindow">Join</button>
@@ -81,7 +82,7 @@
       </div>
       <div class="col-sm-6">
         <div class="card">
-          <div class="card-body">
+          <div class="card-body welcome-card">
             <h5 class="card-title">Already A Member?</h5>
             <p class="card-text">
              Head to the measurements page and update your progress!
