--- a/public/welcome.html
+++ b/public/welcome.html
@@ -21,7 +21,7 @@
       </div>
 
 
-  <div class="container">
+  <!-- <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="welcome.html">M-BODY</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -35,14 +35,14 @@
           <a class="nav-item nav-link" href="user_stat.html">View Stats</a>
         </div>
       </div>
-    </nav>
+    </nav> -->
 
 
  
 
     <div class="row">
       <div class="col-sm-6">
-        <div class="card welcome-card">
+        <div class="card welcome-card bg-transparent border-0">
           <div class="card-body">
             <h5 class="card-title">Ready to Change Your Life?</h5>
             <p class="card-text">
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="col-sm-6">
-        <div class="card">
+        <div class="card bg-transparent border-0">
           <div class="card-body welcome-card">
             <h5 class="card-title">Already A Member?</h5>
             <p class="card-text">
