homepage button fixes

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -87,19 +87,19 @@
              Head to the measurements page and update your progress!
             </p>
 
-            <button type="button" class="btn btn-dark"><a href="measurements.html">Update Progress</button></a>
+            <a href="measurements.html"><button type="button" class="btn btn-dark">Update Progress</button></a>
             
-            <div class="modal fade" id="logInWindow">
+            <!-- <div class="modal fade" id="logInWindow">
               <div class="modal-dialog">
-                <div class="modal-content">
+                <div class="modal-content"> -->
 
                   <!--Header-->
-                  <div class="modal-header">Log in
+                  <!-- <div class="modal-header">Log in
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                   </div>
 
-                  <!--Form-->
-                  <div class="modal-body">
+                  <--Form-->
+                  <!-- <div class="modal-body">
                     <form role="form">
                       <div class="form-group">
                         <input type="email" class="form-control" placeholder="Email">
@@ -109,12 +109,12 @@
                       </div>
                     </form>
                   </div>
-                  <!--Login Button-->
-                  <div class="modal-footer">
+                  <--Login Button-->
+                  <!-- <div class="modal-footer">
                     <button class="btn btn-success btn-block">Log in</button>
                   </div>
                 </div>
-              </div>
+              </div> --> 
 
 
                 <script
