clears test anchors on meas.html

--- a/public/measurements.html
+++ b/public/measurements.html
@@ -30,7 +30,7 @@
                           Users
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                          <a class="dropdown-item" href="#">test test test</a>
+                          <!-- holds dynamically generated User list-->
 
                         </div>
 
