--- a/public/user_stat.html
+++ b/public/user_stat.html
@@ -30,6 +30,21 @@
             </div>
         </nav>
 
+
+        <!-- User Dropdown -->
+
+        <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Users
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+
+                
+
         <div class="jumbotron">
             <h1 class="display-4">STATS</h1>
             <p class="lead">
