added ID to submit buttons

--- a/public/measurements.html
+++ b/public/measurements.html
@@ -248,7 +248,7 @@
             </div>   
           </div>
           <div class="col col-lg-2">        
-            <button type="submit" class="btn btn-primary mb-2 submitButton">Submit All</button>                          
+            <button type="submit" class="btn btn-primary mb-2 submitButton" id="submit-measurements">Submit All</button>                          
           </div>
         </div>
             
