--- a/public/welcome.html
+++ b/public/welcome.html
@@ -71,7 +71,7 @@
                   </div>
                   <!--Login Button-->
                   <div class="modal-footer">
-                    <button class="btn btn-success btn-block join-submit-button">Submit</button>
+                    <button class="btn btn-success btn-block join-submit-button" id="user-join-submit">Submit</button>
                   </div>
                 </div>
               </div>
