updated cards on user page

--- a/public/user.html
+++ b/public/user.html
@@ -44,27 +44,27 @@
       <p class="lead">
             <div class="row">
                     <div class="col-sm-6">
-                      <div class="card">
+                      <div class="card bg-transparent border-0">
                         <div class="card-body">
                           <h5 class="card-title"></h5>
                           <p class="card-text">
                             With supporting text below as a natural lead-in to additional
                             content.
                           </p>
-                          <a href="measurements.html" class="btn btn-primary">ADD MEASUREMENTS</a>
+                          <a href="measurements.html" class="btn btn-dark">ADD MEASUREMENTS</a>
                         </div>
                       </div>
                     </div>
               
                     <div class="col-sm-6">
-                      <div class="card">
+                      <div class="card bg-transparent border-0">
                         <div class="card-body">
                           <h5 class="card-title">Special title treatment</h5>
                           <p class="card-text">
                             With supporting text below as a natural lead-in to additional
                             content.
                           </p>
-                          <a href="user_stat.html" class="btn btn-primary">VIEW STATS</a>
+                          <a href="user_stat.html" class="btn btn-dark">VIEW STATS</a>
                         </div>
                       </div>
                     </div>
