--- a/public/user_stat.html
+++ b/public/user_stat.html
@@ -75,7 +75,7 @@
 
         <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 bicepsButton query-button" data-measurement="leftBicep + rightBicep">Biceps</button>
 
-        <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 forearmsButton query-button" data-measurement="leftForearm + rightBicep">Forearms</button>
+        <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 forearmsButton query-button" data-measurement="leftForearm + rightForearm">Forearms</button>
 
         <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 thighsButton query-button" data-measurement="leftThigh + rightThigh">Thighs</button>
 
