--- a/public/welcome.html
+++ b/public/welcome.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Quicksand" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Quicksand|Oswald:700" rel="stylesheet">
   <link rel="stylesheet" href="./styles/styles.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 </head>
@@ -56,22 +56,22 @@
                 <div class="modal-content">
 
                   <!--Header-->
-                  <div class="modal-header">Create A New Profile
+                  <!-- <div class="modal-header">Create A New Profile
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  </div>
+                  </div> -->
 
                   <!--Form-->
                   <div class="modal-body">
                     <form role="form">
                       <div class="form-group">
-                        <input type="name" class="form-control" placeholder="Name">
+                        <input type="name" class="form-control" placeholder="Please Enter Your Name">
                       </div>
                     
                     </form>
                   </div>
                   <!--Login Button-->
                   <div class="modal-footer">
-                    <button class="btn btn-success btn-block join-submit-button" id="user-join-submit">Submit</button>
+                    <button class="btn btn-dark btn-block join-submit-button" id="user-join-submit">Submit</button>
                   </div>
                 </div>
               </div>
