changed link on measurements page

--- a/public/measurements.html
+++ b/public/measurements.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="user.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="user.html">Add Stats</a>
+                    <a class="nav-item nav-link" href="measurements.html">Add Stats</a>
                     <a class="nav-item nav-link" href="user_stat.html">View Stats</a>
 
                     <div class="dropdown">
