changed link on user stats page

--- a/public/user_stat.html
+++ b/public/user_stat.html
@@ -25,7 +25,7 @@
                 <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="welcome.html">Home <span
                             class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="user.html">Add Stats</a>
+                    <a class="nav-item nav-link" href="measurements.html">Add Stats</a>
                     <a class="nav-item nav-link" href="user_stat.html">View Stats</a>
 
                     <!-- User Dropdown -->
