--- a/public/user.html
+++ b/public/user.html
@@ -33,8 +33,8 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="user.html"> User <span class="sr-only">(current)</span></a
           >
-          <a class="nav-item nav-link" href="user.html">Add Stats</a>
-          <a class="nav-item nav-link" href="measurements.html">View Stats</a>
+          <a class="nav-item nav-link" href="measurements.html">Add Stats</a>
+          <a class="nav-item nav-link" href="user_stat.html">View Stats</a>
         </div>
       </div>
     </nav>
