--- a/public/welcome.html
+++ b/public/welcome.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Quicksand|Monoton|Oswald:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Quicksand|Londrina+Outline" rel="stylesheet">
   <link rel="stylesheet" href="./styles/styles.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 </head>
@@ -16,8 +16,8 @@
 
  
     <div id="home">
-      <div class="container" id="welcome-h1">
-          <h1 class="animated fadeIn">WELCOME TO M-BODY</h1>
+      <div class="container">
+          <h1 class="animated fadeIn" id="welcome-h1">WELCOME TO M-BODY</h1>
       </div>
 
 
