nav bar changes

--- a/public/measurements.html
+++ b/public/measurements.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent border-0">
             <a class="navbar-brand" href="welcome.html">M-BODY</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -247,8 +247,9 @@
               <input type="text" class="form-control" id="rightCalf" placeholder="New Measurement">
             </div>   
           </div>
+      
           <div class="col col-lg-2">        
-            <button type="submit" class="btn btn-primary mb-2 submitButton" id="submit-measurements">Submit All</button>                          
+            <button type="submit" class="btn btn-dark mb-2 submitButton" id="submit-measurements">Submit All</button>                          
           </div>
         </div>
             
