--- a/public/measurements.html
+++ b/public/measurements.html
@@ -42,7 +42,7 @@
 
         
 
-        <div class="jumbotron">
+        <div class="jumbotron bg-transparent border-0">
             <h1 class="display-4">MEASUREMENTS</h1>
             <p class="lead">
 <br>
