--- a/public/user_stat.html
+++ b/public/user_stat.html
@@ -53,7 +53,7 @@
 
 
 
-        <div class="jumbotron">
+        <div class="jumbotron bg-transparent border-0">
             <h1 class="display-4">STATS</h1>
             <p class="lead">
                 GRAPH
