homepage animation additions

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -42,7 +42,7 @@
 
     <div class="row">
       <div class="col-sm-6">
-        <div class="card welcome-card bg-transparent border-0">
+        <div class="card welcome-card bg-transparent border-0 animated slideInLeft">
           <div class="card-body">
             <h5 class="card-title">Ready to Change Your Life?</h5>
             <p class="card-text">
@@ -81,7 +81,7 @@
       </div>
       <div class="col-sm-6">
         <div class="card bg-transparent border-0">
-          <div class="card-body welcome-card">
+          <div class="card-body welcome-card animated slideInRight">
             <h5 class="card-title">Already A Member?</h5>
             <p class="card-text">
              Head to the measurements page and update your progress!
