a lot of changes + added buttons back to userstats

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -17,7 +17,8 @@
  
     <div id="home">
       <div class="container">
-          <h1 class="animated fadeIn" id="welcome-h1">WELCOME TO M-BODY</h1>
+          <h1 class="animated fadeIn" id="welcome-h1">PROGRESSIONAL</h1>
+          <h2 class="animated fadeIn">enter to begin your metamorphosis</h2>
       </div>
 
 
@@ -42,7 +43,7 @@
 
     <div class="row">
       <div class="col-sm-6">
-        <div class="card welcome-card bg-transparent border-0 animated slideInLeft">
+        <div class="card welcome-card bg-transparent border-0">
           <div class="card-body">
             <h5 class="card-title">Ready to Change Your Life?</h5>
             <p class="card-text">
@@ -51,14 +52,12 @@
 
             <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#joinWindow">Join</button>
 
-            <div class="modal fade" id="joinWindow">
+            <div class="modal fade  animated slideInDown" id="joinWindow">
               <div class="modal-dialog">
                 <div class="modal-content">
 
-                  <!--Header-->
-                  <!-- <div class="modal-header">Create A New Profile
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  </div> -->
+               
+                
 
                   <!--Form-->
                   <div class="modal-body">
@@ -71,7 +70,7 @@
                   </div>
                   <!--Login Button-->
                   <div class="modal-footer">
-                    <button class="btn btn-dark btn-block join-submit-button" id="user-join-submit">Submit</button>
+                    <button class="btn btn-dark btn-block" id="user-join-submit">Submit</button>
                   </div>
                 </div>
               </div>
