reverted animation back but modal is not working

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -43,14 +43,16 @@
 
     <div class="row">
       <div class="col-sm-6">
-        <div class="card welcome-card bg-transparent border-0">
-          <div class="card-body">
+        <div class="card bg-transparent border-0 welcome-card animated slideInLeft">
+          <div class="card-body ">
             <h5 class="card-title">Ready to Change Your Life?</h5>
             <p class="card-text">
               Join and start measuring your progress!
             </p>
 
             <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#joinWindow">Join</button>
+            
+
 
             <div class="modal fade  animated slideInDown" id="joinWindow">
               <div class="modal-dialog">
@@ -68,6 +70,8 @@
                     
                     </form>
                   </div>
+
+
                   <!--Login Button-->
                   <div class="modal-footer">
                     <button class="btn btn-dark btn-block" id="user-join-submit">Submit</button>
@@ -78,6 +82,10 @@
           </div>
         </div>
       </div>
+
+
+
+
       <div class="col-sm-6">
         <div class="card bg-transparent border-0">
           <div class="card-body welcome-card animated slideInRight">
