--- a/public/user_stat.html
+++ b/public/user_stat.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container animated slideInUp" id="stats-page">
         <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent border-0">
-            <a class="navbar-brand" href="welcome.html">M-BODY</a>
+            <a class="navbar-brand" href="welcome.html">PROGRESSIONAL</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
