--- a/public/measurements.html
+++ b/public/measurements.html
@@ -16,7 +16,7 @@
     <div class="container animated slideInDown">
         <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent border-0">
           <div class="container" id="measurements-nav">
-            <a class="navbar-brand" href="welcome.html" >M-BODY</a>
+            <a class="navbar-brand" href="welcome.html" >PROGRESSIONAL</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
