--- a/public/welcome.html
+++ b/public/welcome.html
@@ -17,7 +17,7 @@
  
     <div id="home">
       <div class="container">
-          <h1 class="animated fadeIn" id="welcome-h1">PROGRESSIONAL</h1>
+          <h1 id="welcome-h1">PROGRESSIONAL</h1>
           <h2 class="animated fadeIn">enter to begin your metamorphosis</h2>
       </div>
 
@@ -43,7 +43,7 @@
 
     <div class="row">
       <div class="col-sm-6">
-        <div class="card bg-transparent border-0 welcome-card animated slideInLeft">
+        <div class="card bg-transparent border-0 welcome-card">
           <div class="card-body ">
             <h5 class="card-title">Ready to Change Your Life?</h5>
             <p class="card-text">
@@ -88,7 +88,7 @@
 
       <div class="col-sm-6">
         <div class="card bg-transparent border-0">
-          <div class="card-body welcome-card animated slideInRight">
+          <div class="card-body welcome-card">
             <h5 class="card-title">Already A Member?</h5>
             <p class="card-text">
              Head to the measurements page and update your progress!
