graph is now cleaner

--- a/public/user_stat.html
+++ b/public/user_stat.html
@@ -59,7 +59,7 @@
         </div>
         <div class="row">
 
-            <canvas class="col-sm-12" id="lineChart" height="400" width="400"> </canvas>
+            <canvas class="col-sm-12" id="lineChart"> </canvas>
         </div>
 <div class="row">
     <div class="col-sm-12 text-center">
