Cleaned up comments and M-body Title

--- a/public/measurements.html
+++ b/public/measurements.html
@@ -54,7 +54,7 @@
 
         <div class="jumbotron bg-transparent border-0">
             <h1 class="display-4 animate fadeIn">MEASUREMENTS</h1>
-            <p class="lead">
+            <p class="lead"></p>
 
              
 <br>
@@ -280,6 +280,8 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <script src="js/measurements.js"></script>
-</body>
+        </div>
+        </div>
+  </body>
 
 </html>
