--- a/public/user_stat.html
+++ b/public/user_stat.html
@@ -23,8 +23,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <!-- <a class="nav-item nav-link active" href="welcome.html">Home <span
-                            class="sr-only">(current)</span></a> -->
+                    
                     <a class="nav-item nav-link" href="measurements.html">Add Stats</a>
                     <a class="nav-item nav-link" href="user_stat.html">View Stats</a>
 
@@ -42,6 +41,7 @@
 
                     </div>
                 </div>
+            </div>
         </nav>
 
 
@@ -61,33 +61,45 @@
 
             <canvas class="col-sm-12" id="lineChart"> </canvas>
         </div>
-<div class="row">
-    <div class="col-sm-12 text-center">
-        <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 weightButton query-button" data-measurement="weight">Weight</button>
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 weightButton query-button"
+                    data-measurement="weight">Weight</button>
 
-        <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 chestButton query-button" data-measurement="chest">Chest</button>
+                <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 chestButton query-button"
+                    data-measurement="chest">Chest</button>
 
-        <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 waistButton query-button" data-measurement="waist">Waist</button>
+                <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 waistButton query-button"
+                    data-measurement="waist">Waist</button>
 
-        <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 beltButton query-button" data-measurement="beltLine">Belt Line</button>
+                <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 beltButton query-button"
+                    data-measurement="beltLine">Belt Line</button>
 
-        <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 bicepsButton query-button" data-measurement="leftBicep">Left Bicep</button>
+                <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 bicepsButton query-button"
+                    data-measurement="leftBicep">Left Bicep</button>
 
-        <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 bicepsButton query-button" data-measurement="rightBicep">Right Bicep</button>
+                <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 bicepsButton query-button"
+                    data-measurement="rightBicep">Right Bicep</button>
 
-        <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 forearmsButton query-button" data-measurement="leftForearm">Left Forearm</button>
+                <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 forearmsButton query-button"
+                    data-measurement="leftForearm">Left Forearm</button>
 
-        <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 forearmsButton query-button" data-measurement="rightForearm">Right Forearm</button>
+                <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 forearmsButton query-button"
+                    data-measurement="rightForearm">Right Forearm</button>
 
-        <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 thighsButton query-button" data-measurement="leftThigh">Left Thigh</button>
+                <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 thighsButton query-button"
+                    data-measurement="leftThigh">Left Thigh</button>
 
-        <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 thighsButton query-button" data-measurement="rightThigh">Right Thigh</button>
+                <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 thighsButton query-button"
+                    data-measurement="rightThigh">Right Thigh</button>
 
-        <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 calvesButton query-button" data-measurement="leftCalf">Left Calf</button>
+                <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 calvesButton query-button"
+                    data-measurement="leftCalf">Left Calf</button>
 
-        <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 calvesButton query-button" data-measurement="rightCalf">Right Calf</button>
-    </div>
-</div>
+                <button type="button" class="btn btn-dark mr-1 mt-3 mb-5 calvesButton query-button"
+                    data-measurement="rightCalf">Right Calf</button>
+            </div>
+        </div>
 
     </div>
 
