--- a/public/welcome.html
+++ b/public/welcome.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>M-Body Homepage</title>
+  <title>PROGRESSIONAL</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
@@ -20,25 +20,6 @@
           <h1 id="welcome-h1">PROGRESSIONAL</h1>
           <h2 class="animated fadeIn">enter to begin your metamorphosis</h2>
       </div>
-
-
-  <!-- <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="welcome.html">M-BODY</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="welcome.html">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="user.html">Add Stats</a>
-          <a class="nav-item nav-link" href="user_stat.html">View Stats</a>
-        </div>
-      </div>
-    </nav> -->
-
-
  
 
     <div class="row">
@@ -96,32 +77,6 @@
 
             <a href="measurements.html"><button type="button" class="btn btn-dark">Update Progress</button></a>
             
-            <!-- <div class="modal fade" id="logInWindow">
-              <div class="modal-dialog">
-                <div class="modal-content"> -->
-
-                  <!--Header-->
-                  <!-- <div class="modal-header">Log in
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  </div>
-
-                  <--Form-->
-                  <!-- <div class="modal-body">
-                    <form role="form">
-                      <div class="form-group">
-                        <input type="email" class="form-control" placeholder="Email">
-                      </div>
-                      <div class="form-group">
-                        <input type="password" class="form-control" placeholder="Password">
-                      </div>
-                    </form>
-                  </div>
-                  <--Login Button-->
-                  <!-- <div class="modal-footer">
-                    <button class="btn btn-success btn-block">Log in</button>
-                  </div>
-                </div>
-              </div> --> 
 
 
                 <script
@@ -136,7 +91,11 @@
                   crossorigin="anonymous"></script>
                   <script src="js/welcome.js"></script>
 
-
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
               
 </body>
 
